fix scrollbar visibility

--- a/packages/klevu-ui/src/components/klevu-chat-layout/klevu-chat-layout.css
+++ b/packages/klevu-ui/src/components/klevu-chat-layout/klevu-chat-layout.css
@@ -6,6 +6,7 @@
 }
 
 main {
+  height: 100%;
   flex-grow: 1;
 }
 
