--- a/packages/klevu-ui/src/components/klevu-util-scrollbars/klevu-util-scrollbars.css
+++ b/packages/klevu-ui/src/components/klevu-util-scrollbars/klevu-util-scrollbars.css
@@ -1,6 +1,15 @@
 :host {
   display: block;
 }
+
+/**************************************
+ *                                    *
+ *   copy pasted from default theme   *
+ *   NOTE THAT THERE IS CUSTOM CODE   *
+ *   AFTER COPY PASTED SECTION!       *
+ *                                    *
+ **************************************/
+
 /*! 
  * OverlayScrollbars
  * Version: 2.2.1
@@ -667,4 +676,29 @@ body > .os-scrollbar {
 }
 .os-no-css-vars.os-theme-light:active .os-scrollbar-handle {
   background: rgba(255, 255, 255, 0.66);
+}
+
+/** Klevu theme */
+.os-theme-klevu {
+  --os-size: 4px;
+  --os-padding-perpendicular: 2px;
+  --os-padding-axis: 2px;
+  --os-track-border-radius: 10px;
+  --os-handle-interactive-area-offset: 4px;
+  --os-handle-border-radius: 10px;
+  --os-handle-bg: var(--klevu-util-scrollbar-handle-bg, var(--klevu-color-neutral-5, rgba(0, 0, 0, 0.44)));
+  --os-handle-bg-hover: var(--klevu-util-scrollbar-handle-bg-hover, var(--klevu-color-neutral-6, rgba(0, 0, 0, 0.55)));
+  --os-handle-bg-active: var(
+    --klevu-util-scrollbar-handle-bg-active,
+    var(--klevu-color-neutral-7, rgba(0, 0, 0, 0.66))
+  );
+}
+/** improve usability by increasing clickable area */
+.os-theme-klevu .os-scrollbar-handle::after {
+  content: "";
+  position: absolute;
+  top: -8px;
+  left: -8px;
+  width: calc(100% + 16px);
+  height: calc(100% + 16px);
 }
